[package]
name = "fizzbuzz-extreme-edition"
version = "0.1.0"
edition = "2018"
authors = [ "fboulnois <fboulnois@users.noreply.github.com>" ]
description = "An extremely straightforward implementation of FizzBuzz in Rust"
keywords = [ "fizzbuzz", "rust" ]
readme = "README.md"
repository = "https://github.com/fboulnois/fizzbuzz-extreme-edition"

[dependencies]
